--- a/SudentMgnt/backend/StudentDemo/Student.Domin/Student.Domin.csproj
+++ b/SudentMgnt/backend/StudentDemo/Student.Domin/Student.Domin.csproj
@@ -7,10 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Repositories\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.24" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.24" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.24">
@@ -20,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Student.Application\Student.Application.csproj" />
     <ProjectReference Include="..\Student.Entities\Student.Entities.csproj" />
   </ItemGroup>
 
